Добавлены модель представление для добавления новостей, а так-же стиль для неё. Внесены некоторые правки в стиль регистрации для универсализации его.

--- a/WebApplication1/wwwroot/html/RegistrationModel.html
+++ b/WebApplication1/wwwroot/html/RegistrationModel.html
@@ -28,7 +28,7 @@
 				</span>
 			</div>
 			<div class="FormContainer">
-				<form action="post" class="RegistredForm">
+				<form action="post" class="AddNewObjectForm">
 					<div class="RegistredForm_ButtonContainer">
 						<span class="RegistredForm_ButtonContainer__PreInput"> Ваше имя: </span>
 						<input type="text" class="RegistredForm_ButtonContainer__Input" required>
