Реализовано сохранение документов новостей в текстовые файлы.
Текст из файла новостей теперь может быть преобразован в DTO объект, в котором он разбит на параграфы.

Теперь файлы новостей сохраняются в документах ПК.

Главная теперь выводит только заголовки новостей в виде ссылки на страницу просмотра новости.

--- a/WebApplication1/wwwroot/html/IndexModel.html
+++ b/WebApplication1/wwwroot/html/IndexModel.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8" />
@@ -25,24 +25,16 @@
 			<div class="NewsBlock_Container">
 				<ul class="NewsBlock">
 					<li class="NewsBlock_Item"> 
-							<span class="NewsBlock_Item__Title">Name</span>
-							<span class="NewsBlock_Item_Content">Content</span>
+							<a href="#" class="NewsBlock_Item__Title">NameOfNews</a>
 						</li>
 					<li class="NewsBlock_Item"> 
-							<span class="NewsBlock_Item__Title">Name</span>
-							<span class="NewsBlock_Item_Content">Content</span>
+							<a href="#" class="NewsBlock_Item__Title">NameOfNews</a>
 						</li>
 					<li class="NewsBlock_Item"> 
-							<span class="NewsBlock_Item__Title">Name</span>
-							<span class="NewsBlock_Item_Content">Content</span>
+							<a href="#" class="NewsBlock_Item__Title">NameOfNews</a>
 						</li>
 					<li class="NewsBlock_Item"> 
-							<span class="NewsBlock_Item__Title">Name</span>
-							<span class="NewsBlock_Item_Content">Content</span>
-						</li>
-					<li class="NewsBlock_Item"> 
-							<span class="NewsBlock_Item__Title">Name</span>
-							<span class="NewsBlock_Item_Content">Content</span>
+							<a href="#" class="NewsBlock_Item__Title">NameOfNews</a>
 						</li>
 					<li class="NewsBlock_Item"> 
 							<span class="NewsBlock_Item__Title">Name</span>
