Реализован вывод заголовка новости и его текста на страницу просмотра.
Стилистические улучшения страниц, в частности Главной и Просмотра (Watch).

--- a/WebApplication1/wwwroot/html/WatchModel.html
+++ b/WebApplication1/wwwroot/html/WatchModel.html
@@ -24,7 +24,7 @@
 		<main class="MainContentContainer">
 			<div class="NewsContainer">
 				<div class="NewsContainer_TitleContainer">
-					<h2 class="NewsContainer__Title"> Заголовок новости </h2>
+					<h1 class="NewsContainer__Title"> Заголовок новости </h1>
 				</div>
 				
 				<div class="NewsContainer_Paragraph">
@@ -35,12 +35,8 @@
 					<h4 class="NewsContainer_Paragraph__Title"> Заголовок параграфа </h4>
 					<p class="NewsContainer_Paragraph__Text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam aut quos sunt officiis, reprehenderit a unde harum placeat quam pariatur soluta magnam quaerat saepe iusto rem earum, alias at hic!</p>
 				</div>
-
-				<p> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-
-				<div class="NewsContainer_ReferenceContainer">
-					<a href="#" class="NewsContainer__Reference"> Ссылка на источник </a>
-					<a href="#" class="NewsContainer__Reference"> Ссылка на источник </a>
+				<div class="NewsContainer_Paragraph">
+					<p class="NewsContainer_Paragraph__Text"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 				</div>
 			</div>
 		</main>
