--- a/WebApplication1/wwwroot/html/IndexModel.html
+++ b/WebApplication1/wwwroot/html/IndexModel.html
@@ -15,9 +15,6 @@
 			<div class="NavigationMenu_ButtonContainer">
 				<a href="#" class="NavigationMenu_Button"> Регистрация </a>
 			</div>
-			<div class="NavigationMenu_ButtonContainer">
-				<a href="#" class="NavigationMenu_Button"> О сайте </a>
-			</div>
 		</nav>
 	</header>
 
@@ -25,20 +22,29 @@
 			<div class="NewsBlock_Container">
 				<ul class="NewsBlock">
 					<li class="NewsBlock_Item"> 
-							<a href="#" class="NewsBlock_Item__Title">NameOfNews</a>
+							<a href="#" class="NewsBlock_Item__Ref">
+								<span class="NewsBlock_Item__Ref__Title">В Израиле вырастили новый сорт риса!</span>
+							</a>
 						</li>
 					<li class="NewsBlock_Item"> 
-							<a href="#" class="NewsBlock_Item__Title">NameOfNews</a>
+							<a href="#" class="NewsBlock_Item__Ref">
+								<span class="NewsBlock_Item__Ref__Title">Программисты мира перестали говорить на своих языках, заменив его на HTML</span>
+							</a>
 						</li>
 					<li class="NewsBlock_Item"> 
-							<a href="#" class="NewsBlock_Item__Title">NameOfNews</a>
+							<a href="#" class="NewsBlock_Item__Ref">
+								<span class="NewsBlock_Item__Ref__Title">Редактор, уговори уже джуна Юлю починить принтер!</span>
+							</a>
 						</li>
 					<li class="NewsBlock_Item"> 
-							<a href="#" class="NewsBlock_Item__Title">NameOfNews</a>
+							<a href="#" class="NewsBlock_Item__Ref">
+								<span class="NewsBlock_Item__Ref__Title">Дизайнер языка C++ умер от переполнения стека</span>
+							</a>
 						</li>
-					<li class="NewsBlock_Item"> 
-							<span class="NewsBlock_Item__Title">Name</span>
-							<span class="NewsBlock_Item_Content">Content</span>
+						<li class="NewsBlock_Item"> 
+							<a href="#" class="NewsBlock_Item__Ref">
+								<span class="NewsBlock_Item__Ref__Title">Google купил Казахстан</span>
+							</a>
 						</li>
 				</ul>
 			</div>
