Improved UI styles, title is now a link to the home page.

--- a/WebApplication1/wwwroot/html/IndexModel.html
+++ b/WebApplication1/wwwroot/html/IndexModel.html
@@ -13,7 +13,10 @@
 		</div>
 		<nav class="NavigationMenu">
 			<div class="NavigationMenu_ButtonContainer">
-				<a href="#" class="NavigationMenu_Button"> Регистрация </a>
+				<a href="RegistrationModel.html" class="NavigationMenu_Button"> Регистрация </a>
+			</div>
+			<div class="NavigationMenu_ButtonContainer">
+				<a href="AddNewsModel.html" class="NavigationMenu_Button"> Добавить новость </a>
 			</div>
 		</nav>
 	</header>
