--- a/WebApplication1/wwwroot/html/RegistrationModel.html
+++ b/WebApplication1/wwwroot/html/RegistrationModel.html
@@ -13,10 +13,10 @@
 		</div>
 		<nav class="NavigationMenu">
 			<div class="NavigationMenu_ButtonContainer">
-				<a href="#" class="NavigationMenu_Button"> Регистрация </a>
+				<a href="IndexModel.html" class="NavigationMenu_Button"> Главная </a>
 			</div>
 			<div class="NavigationMenu_ButtonContainer">
-				<a href="#" class="NavigationMenu_Button"> О сайте </a>
+				<a href="AddNewsModel.html" class="NavigationMenu_Button"> Добавить новость </a>
 			</div>
 		</nav>
 	</header>
@@ -30,12 +30,17 @@
 			<div class="FormContainer">
 				<form action="post" class="AddNewObjectForm">
 					<div class="RegistredForm_ButtonContainer">
-						<span class="RegistredForm_ButtonContainer__PreInput"> Ваше имя: </span>
+						<span class="RegistredForm_ButtonContainer__PreInputText"> Ваше имя </span>
 						<input type="text" class="RegistredForm_ButtonContainer__Input" required>
 					</div>
 					<div class="RegistredForm_ButtonContainer">
-						<span class="RegistredForm_ButtonContainer__PreInput"> Ваш Email: </span>
+						<span class="RegistredForm_ButtonContainer__PreInputText"> Ваш Email </span>
 						<input type="Email" class="RegistredForm_ButtonContainer__Input" required>
+					</div>
+					<div class="RegistredForm_SubmitContainer">
+						<button class="RegistredForm_SubmitContainer__SubmitButton">
+							Зарегистрироваться
+						</button>
 					</div>
 				</form>
 			</div>
