Added styles for the page add news, unified form styles.
Form styles are now generic, they are stored in RegistrationStyles.
And other minor interface improvements.

--- a/WebApplication1/wwwroot/html/IndexModel.html
+++ b/WebApplication1/wwwroot/html/IndexModel.html
@@ -9,7 +9,7 @@
 <body class="LayoutBody">
 	<header>
 		<div class="Title_Container">
-			<span class="Title_Container_Title">The NewsSite</span>
+			<a href="IndexModel.html" class="Title_Container_Title">The NewsSite</a>
 		</div>
 		<nav class="NavigationMenu">
 			<div class="NavigationMenu_ButtonContainer">
