--- a/WebApplication1/wwwroot/html/RegistrationModel.html
+++ b/WebApplication1/wwwroot/html/RegistrationModel.html
@@ -9,7 +9,7 @@
 <body class="LayoutBody">
 	<header>
 		<div class="Title_Container">
-			<span class="Title_Container_Title">The NewsSite</span>
+			<a href="IndexModel.html" class="Title_Container_Title">The NewsSite</a>
 		</div>
 		<nav class="NavigationMenu">
 			<div class="NavigationMenu_ButtonContainer">
@@ -28,17 +28,17 @@
 				</span>
 			</div>
 			<div class="FormContainer">
-				<form action="post" class="AddNewObjectForm">
-					<div class="RegistredForm_ButtonContainer">
-						<span class="RegistredForm_ButtonContainer__PreInputText"> Ваше имя </span>
-						<input type="text" class="RegistredForm_ButtonContainer__Input" required>
+				<form action="post" class="Form">
+					<div class="Form_ButtonContainer">
+						<span class="InputFile__PreText"> Ваше имя </span>
+						<input type="text" class="InputText" required>
 					</div>
-					<div class="RegistredForm_ButtonContainer">
-						<span class="RegistredForm_ButtonContainer__PreInputText"> Ваш Email </span>
-						<input type="Email" class="RegistredForm_ButtonContainer__Input" required>
+					<div class="Form_ButtonContainer">
+						<span class="InputFile__PreText"> Ваш Email </span>
+						<input type="Email" class="InputText" required>
 					</div>
-					<div class="RegistredForm_SubmitContainer">
-						<button class="RegistredForm_SubmitContainer__SubmitButton">
+					<div class="Form_ButtonContainer">
+						<button class="Form_ButtonContainer__SubmitButton">
 							Зарегистрироваться
 						</button>
 					</div>
