--- a/WebApplication1/wwwroot/html/AddNewsModel.html
+++ b/WebApplication1/wwwroot/html/AddNewsModel.html
@@ -4,43 +4,44 @@
 	<meta charset="utf-8" />
 	<title> NewsSite </title>
 	<meta name="description" content="Главная страница NewsSite">
-	<link rel="stylesheet" href="../css/RegistrationStyles.css">
+	<link rel="stylesheet" href="../css/AddNewsStyles.css">
 </head>
 <body class="LayoutBody">
 	<header>
 		<div class="Title_Container">
-			<span class="Title_Container_Title">The NewsSite</span>
+			<a href="IndexModel.html" class="Title_Container_Title">The NewsSite</a>
 		</div>
 		<nav class="NavigationMenu">
 			<div class="NavigationMenu_ButtonContainer">
-				<a href="#" class="NavigationMenu_Button"> Регистрация </a>
+				<a href="RegistrationModel.html" class="NavigationMenu_Button"> Регистрация </a>
 			</div>
 			<div class="NavigationMenu_ButtonContainer">
-				<a href="#" class="NavigationMenu_Button"> О сайте </a>
+				<a href="IndexModel.html" class="NavigationMenu_Button"> Главная </a>
 			</div>
 		</nav>
 	</header>
 
 		<main class="MainContentContainer">
 			<div class="FormContainer">
-				<form action="#" class="AddNewObjectForm">
-					<div class="AddNewObjectForm_ButtonContainer">
-						<input class="InputFile" 
+				<form action="#" class="Form">
+					<div class="Form_ButtonContainer">
+						<span class="InputFile__PreText">Впишите название новости</span>
+						<input class="InputText"  type="text" required>
+					</div>
+					<div class="Form_ButtonContainer">
+						<span class="InputFile__PreText">Ваше имя</span>
+						<input class="InputText"  type="text" required>
+					</div>
+					<div class="Form_ButtonContainer">
+						<input class="InputFile"
 						id="DocFile" 
 						type="file" 
 						required accept=".doc,.docx">
 						<label for="DocFile" class="InputFile_Lable">
-							<span class="InputFile__Text">Выберите файл для загрузки...</span>
+							Выбрать файл для загрузки
 						</label>
 					</div>
-					<div class="AddNewObjectForm_ButtonContainer">
-						<span class="InputFile__Text">Впишите название новости:</span>
-						<input class="InputText"  type="text" required>
-					</div>
-					<div class="AddNewObjectForm_ButtonContainer">
-						<span class="InputFile__Text">Ваше имя:</span>
-						<input class="InputText"  type="text" required>
-					</div>
+					<button class="Form_ButtonContainer_ButtonContainer" type="submit"> Отправить новость </button>
 				</form>
 			</div>
 		</main>
